--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
             <img src="imgs/seeshell/cp001.jpg" >
         </div>
         <div class="seemore">
-<p> Read More > </p>    
-</div>
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
 <div class="sectioncontent">
      <div class="bodydesc"style='font-weight: 600;'> Seeshell is a biocentric ocean health monitor that reinforces the human connection to the marine environment.  Seeshell demonstrates the ability of clams and mussels to purify the ocean, but reminds us that human cooperation is required. Seeshell tracks the motion of clams and mussels to measure water contamination in realtime: in the presence of high levels of contaminants bivalves close their shells. Seeshell's glass enclosure introduces a new point of exchange with aquatic life; as commercial fishing fades to tourism and climate change threatens fisheries Seeshell expresses the tangible value of native species if cultivated and helped to flourish.    </div>        
      <div class="bodydesc"> Seeshell hosts a colony of shellfish (bivalves) in a transparent enclosure, installed at intertidal zones. Each installation is raised a meter from the ground, supported by a tower tailored to provide habitat for local species. A pile of stones offers crabs shelter from seabirds or a textured pillar lends mussels a perch to bite. Hidden pipes draw fresh seawater into the enclosure, circulating the colony with nutrients and particulate. The device observes the level of local seawater pollution through the technique of valvometry: the monitoring of clam and mussel shell motion as they open or close to provide cover from water contaminants.Through a computer-vision system Seeshell observes changes to water quality, such as presence of harmful chemicals like excess fertilizers. A network of sensors along a coastline provides real-time and historic information about local conditions, serving as an early warning for sewage or agricultural contamination. This information is charted to an online map, and made accessible to the public. Seeshell can be used to track changing water conditions remotely, or verify in person if the water at a beach is safe for swimming, fishing, or wading.    </div>        
@@ -304,7 +304,8 @@
             <img src="imgs/rockbell/rbG001.gif">
         </div>
         <div class="seemore">
-            <p> Read More > </p>    
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
             <div class="sectioncontent">
             <div class="bodydesc" > Instigate interaction with natural materials in the built
         environment. Rockbell is a new form of interface that calls attention to mundane actions. Strike one
@@ -338,7 +339,8 @@
             <img src="imgs/at004.jpg" alt="Speculative Object">
         </div>
         <div class="seemore">
-            <p> Read More > </p>        
+            <p>Read More <span class="arrow">></span></p>    
+          </div>    
             <div class="sectioncontent">
                 <div class="bodydesc" > 
                     How does the practice of healthcare change when we emphasize sensory information over absolute measurements and values? This thermometer reminds the user to pay close attention to signals from their body, and that sickness and health are more than binary. This device produces two tones, one effected by the user’s temperature. The device is tuned so a healthy temperature will align the two sound waves and a slight fever will prevent the tones from synchronizing. Place device to forehead and listen (closely) to your body.
@@ -381,8 +383,8 @@
             <img src="imgs/RSB images/RSW001.jpg" >
         </div>
         <div class="seemore">
-<p> Read More > </p>    
-</div>
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
 <div class="sectioncontent">
     <div class="bodydesc" style='font-weight: 600;'>Oriented Strand Board (OSB) is a wood composite commonly used in construction and furniture, manufactured by compressing wood chips with adhesive under high temperature and pressure. Challenging perceptions of OSB as a lesser material, RSB (Reoriented Strand Board) refines the aesthetic character of wood composite and reconnects users to the material’s origin with an embedded grain structure reminiscent of natural hardwood. Dyed strands are scattered, aligned, and bonded into the material to form swirling patterns. RSB amends the surface of OSB with a clear motif, creating an opportunity for architects, designers, and makers to celebrate the materiality of wood composites in the same way they might hardwood. </div>
     <div class="bodydesc">The primary goal of this project was to validate that large-particle patterns could be formed with cymatic vibration. By verifying that aesthetically pleasing grain-like patterns can be assembled and bonded with an automated process the potential to integrate RSB in design and construction through mass manufacture was confirmed. </div>
@@ -425,13 +427,12 @@
             <img src="imgs/cb/cb007.jpg" >
         </div>
         <div class="seemore">
-<p> Read More > </p>    
-</div>
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
 <div class="sectioncontent">
     <div class="bodydesc" >
         Cam Bench is a furniture set that creates utility from the state of being in storage. Cam Bench repurposes objects, material, tools, and scraps as utilities. A pair of triangular legs act as a fixture for a bench or coffee table, providing a sturdy base to support seats made of ladders, brooms and mops, leftover construction materials, and anything else too important or sentimental to throw out. The legs secure a seat without tools or fasteners, simply by rotating into place; to make building accessible to non-builders, and to avoid modifications to supplied material. Potential user-supplied seat materials include: cardboard boxes, fence posts, sticks and yard trimmings, books and paper, boats and oars, camping equipment, car parts, broken furniture, pallets, bodies. Households accumulate clutter, storage fills up. We hold artifacts, materials, and tools for their nostalgic value, potential future need, or their expected but infrequent use. Could these utilities be preserved without taking up space?   
     </div>
-</br>
 </div>
         <div class="tags">
             <span class="tag color-material">Material</span>
@@ -475,13 +476,12 @@
             <img src="imgs/slip/slip008.jpg" >
         </div>
         <div class="seemore">
-<p> Read More > </p>    
-</div>
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
 <div class="sectioncontent">
     <div class="bodydesc" >
         A sheer and near weightless slip dress, made of Dyneema (ultra high molecular weight polyethylene): a fully waterproof composite material, stronger than steel by weight. The slip was stitched and seam taped, and though the wearer is visually exposed they are fully insulated from outside forces and conditions.
     </div>
-</br>
 </div>
         <div class="tags">
             <span class="tag color-material">Material</span>
