--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="sub">Non-Graphic Interfaces </div>
     </div>
     <div class="sectionheader">
-        <span> Alternitive Human-Computer interactions
+        <span> Alternative Human-Computer interactions
         </span>
 </div>
 <hr>
