--- a/index.html
+++ b/index.html
@@ -219,11 +219,13 @@
 </div>
 <hr>
 <div class="button-container">
+    <button class="toggle-button color-sound" onclick="toggleButton(this)">Sound</button>
     <button class="toggle-button color-speculative" onclick="toggleButton(this)">Speculative</button>
     <button class="toggle-button color-material" onclick="toggleButton(this)">Material</button>
     <button class="toggle-button color-interaction" onclick="toggleButton(this)">Interaction</button>
     <button class="toggle-button color-learning" onclick="toggleButton(this)">Learning How</button>
-    <button class="toggle-button color-sound" onclick="toggleButton(this)">Sound</button>
+    <button class="toggle-button color-digital" onclick="toggleButton(this)">Digital</button>
+
     
 </div>
 </div>
@@ -238,6 +240,38 @@
         </span>
 </div>
 <hr>
+
+<!-- RoomTone -->
+<div class="sectioncard">
+<div class="sectiontitle">
+    Room Tone
+</div>
+<div class="bodycontent">
+    <div class="bodydesc">
+        A new approach to sound counditioning - ambient harmony.  
+    </div>
+    <div class="gallery">
+        <img src="imgs/roomtone/RT3.png">
+        <img src="imgs/roomtone/RT2.jpg">
+    </div>
+    <div class="seemore">
+        <p>Read More <span class="arrow">></span></p>    
+        </div>
+        <div class="sectioncontent">
+        <div class="bodydesc" style='font-weight: 600;' > Room Tone builds harmonizing notes around the dissonant ambient soundscape of daily life, unifying a busy environment around a shared chord. Room Tone makes a home feel calm and comfortable, or helps maintain concentration at work. The program is available to demo at
+            <a href="https://www.roomtone.xyz/">RoomTone.xyz</a>.
+<br> </div> <div class="bodydesc" >
+Room Tone negates unpleasant noises while preserving our environment. Unlike the existing systems we use to reduce disturbing sounds (like noise cancellation or white noise machines, which isolate us from our surroundings) Room Tone removes only dissonance from a soundscape. Dissonant sounds make it hard to concentrate or relax; they make us feel unsettled or tense.                    
+</div> <div class="bodydesc" >
+Sounds define how a place feels. The noises around us are distinct and disconnected, and rarely fit together neatly. At their core, all ambient noises contain musical notes. Workplaces click clack in D. Engines rumble in G flat and traffic is perforated with the Fs of a honk. Washing machines drone at A, and a microwave hums along at E flat. Room Tone identifies the musical notes embedded in ambient noise, and synthesizes a harmonizing tone to unify disconnected sounds and mask disturbing ones. Like a composer reinterpreting an existing piece of music, Room Tone rearranges the content of a soundscape, so the jarring dissonant sounds fade away. It makes any setting feel warm soothing and resolved.
+</div>            
+</div> 
+<div class="tags">
+        <span class="tag color-sound">Sound</span>
+        <span class="tag color-digital">Digital</span>
+    </div>
+</div>
+</div>
 
 <!-- Seeshell -->
 <div class="sectioncard">
@@ -322,7 +356,6 @@
         </div>
     </div>
     </div>
-</div>
 
 
 <!-- Sonic Thermometer -->
@@ -354,7 +387,6 @@
     </div>
 </div>
 
-</div>
 
 </div>
 
