--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 <!-- actant objects -->
 <div class="bodycontent" id="actant objects">
       <div  class="sub-container">
-        <div class="sub">Actant Objects </div>
+        <div class="sub">Actant Systems</div>
 </div>
     <div class="sectionheader">
-        <span> Objects which affect and respond
+        <span> Systems or objects which affect and respond
         </span>
 </div>
 <hr>
