--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AL</title>
-  
+  <title>Acheulean Lab</title>
+  <link rel="icon" href="imgs/ALfavicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <script src="ALscripts.js"></script>
   
