--- a/index.html
+++ b/index.html
@@ -349,6 +349,13 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
         Fix (which details the myriad of benefits that come from exposure to the outdoors) and the overly
         digital world of the remote days of covid-19.
     </div>      
+    <div style = "margin-bottom: 6px; margin-left:6px;">
+        <div style="padding:0 0 0 0; height:300px;position:relative;"><iframe
+                src="https://player.vimeo.com/video/827426226?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                style="position:absolute;top:0;left:0;width:80%;height:300px;" title=""></iframe></div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
     </div> 
 <div class="tags">
             <span class="tag color-sound">Sound</span>
@@ -378,7 +385,21 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
                 <div class="bodydesc" > 
                     How does the practice of healthcare change when we emphasize sensory information over absolute measurements and values? This thermometer reminds the user to pay close attention to signals from their body, and that sickness and health are more than binary. This device produces two tones, one effected by the user’s temperature. The device is tuned so a healthy temperature will align the two sound waves and a slight fever will prevent the tones from synchronizing. Place device to forehead and listen (closely) to your body.
                 </div>
-            
+                <div style = "margin-bottom: 6px; justify-self: left;">
+                    <div style="padding:0 0 0 0; height:300px;position:relative;"><iframe
+                        src="https://player.vimeo.com/video/796995579?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                        frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                        style="position:absolute;top:0;left:0;width:80%;height:300px;"
+                        title="Acheulean Lab: Sonic Thermometer 001"></iframe></div>
+                    <script src="https://player.vimeo.com/api/player.js"></script>
+                    </br>
+                    <div  style="padding:0 0 0 0; height:300px;position:relative;"><iframe
+                      src="https://player.vimeo.com/video/796997251?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                        frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                        style="position:absolute;top:0;left:0;width:80%;height:300px;"
+                        title="Acheulean Lab: Sonic Thermometer 002"></iframe></div>
+                    <script src="https://player.vimeo.com/api/player.js"></script>
+                    </div>
             </div>
         <div class="tags">
             <span class="tag color-speculative">Speculative</span>
@@ -465,6 +486,15 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
     <div class="bodydesc" >
         Cam Bench is a furniture set that creates utility from the state of being in storage. Cam Bench repurposes objects, material, tools, and scraps as utilities. A pair of triangular legs act as a fixture for a bench or coffee table, providing a sturdy base to support seats made of ladders, brooms and mops, leftover construction materials, and anything else too important or sentimental to throw out. The legs secure a seat without tools or fasteners, simply by rotating into place; to make building accessible to non-builders, and to avoid modifications to supplied material. Potential user-supplied seat materials include: cardboard boxes, fence posts, sticks and yard trimmings, books and paper, boats and oars, camping equipment, car parts, broken furniture, pallets, bodies. Households accumulate clutter, storage fills up. We hold artifacts, materials, and tools for their nostalgic value, potential future need, or their expected but infrequent use. Could these utilities be preserved without taking up space?   
     </div>
+</br>
+    <div style="margin-bottom: 6px;"> 
+        <iframe width="80%" height="300px" src="https://www.youtube-nocookie.com/embed/PEYZ3VmOcMM?controls=0"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        </div>
+    </br>
+
 </div>
         <div class="tags">
             <span class="tag color-material">Material</span>
