--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="style.css">
   <script src="ALscripts.js"></script>
 
+    <!-- Preload redimg images -->
+    <link rel="preload" href="imgs/handaxe/008b.png" as="image">
+    <link rel="preload" href="imgs/handaxe/001b.png" as="image">
+    <link rel="preload" href="imgs/handaxe/003b.png" as="image">
+    <link rel="preload" href="imgs/handaxe/005b.png" as="image">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
