--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <div class="square gradient"></div>
       </div>
 
+      <div class="mobile-top">
+        <div class="square gradient"></div>
+      </div>
+
        <div class="burger" style="display: none;">
         <div class = "bgw">
         <img src="imgs/ACHEULEANLABHEADER.gif" class="burger-image">
@@ -522,7 +526,34 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
 </div>
 <hr>
 
-
+<!-- ASCII -->
+<div class="sectioncard">
+    <div class="sectiontitle">
+        Acheulean Lab ASCII
+    </div>
+    <div class="bodycontent">
+        <div class="bodydesc">
+            Custom ASCII generator script.
+        </div>
+        <div class="gallery">
+                        <img src="imgs/ascii/asciiaxe3.png" >
+            <img src="imgs/ascii/asciiaxe4.png" >
+            <img src="imgs/ascii/asciiaxe2.png" >
+    
+        </div>
+        <div class="seemore">
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
+<div class="sectioncontent">
+    <div class="bodydesc" >
+A simple web-based ASCII art generator that converts images to ASCII artwork with "Acheulean Lab" characters and colors. Accessible on <a href="https://github.com/Acheulean-Lab/achlab_ascii/blob/main/README.md">github</a>.</div>
+</div>
+        <div class="tags">
+            <span class="tag color-digital">Digital</span>
+            <span class="tag color-learning">Learning How</span>
+        </div>
+    </div>
+</div>
 
 <!-- Slip -->
 <div class="sectioncard">
@@ -589,8 +620,6 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
 </div>
 
 </body>
-
-
 
 </html>
 
