--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
     <button class="toggle-button color-interaction" onclick="toggleButton(this)">Interaction</button>
     <button class="toggle-button color-learning" onclick="toggleButton(this)">Learning How</button>
     <button class="toggle-button color-digital" onclick="toggleButton(this)">Digital</button>
+    <button class="toggle-button active" onclick="activateAll(this)">  ✕  </button>
+
 
     
 </div>
