--- a/index.html
+++ b/index.html
@@ -531,16 +531,16 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
 <!-- ASCII -->
 <div class="sectioncard">
     <div class="sectiontitle">
-        Acheulean Lab ASCII
+        Acheulean Lab ASCII Playground
     </div>
     <div class="bodycontent">
         <div class="bodydesc">
-            Custom ASCII generator script.
+            Custom ASCII generator. <a href="ascii_zone/grid.html">Try it!</a>
         </div>
         <div class="gallery">
                         <img src="imgs/ascii/asciiaxe3.png" >
-            <img src="imgs/ascii/asciiaxe4.png" >
-            <img src="imgs/ascii/asciiaxe2.png" >
+            <img src="imgs/ascii/asciiface.png" >
+      
     
         </div>
         <div class="seemore">
@@ -548,7 +548,7 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
           </div>
 <div class="sectioncontent">
     <div class="bodydesc" >
-A simple web-based ASCII art generator that converts images to ASCII artwork with "Acheulean Lab" characters and colors. Accessible on <a href="https://github.com/Acheulean-Lab/achlab_ascii/blob/main/README.md">github</a>.</div>
+A simple web-based ASCII art generator that converts images to ASCII artwork with "Acheulean Lab" characters and colors. Accessible <a href="ascii_zone/grid.html">HERE</a>.</div>
 </div>
         <div class="tags">
             <span class="tag color-digital">Digital</span>
