--- a/ascii_zone/grid.html
+++ b/ascii_zone/grid.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-  <title>Swiss Style Grid</title>
+  <title>Acheulean Lab ASCII Playground</title>
   <link rel="stylesheet" href="grid.css">
 </head>
 <body>
