Link restyle and RT description

--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
 </div>
 <div class="bodycontent">
     <div class="bodydesc">
-        A new approach to sound counditioning - ambient harmony.  
+       How does ambient sound make you feel? Ambient harmony for clearer state of mind.  <a href="https://www.roomtone.xyz/">RoomTone.xyz</a>
+ 
     </div>
     <div class="gallery">
         <img src="imgs/roomtone/RT3.png">
@@ -535,11 +536,11 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
     </div>
     <div class="bodycontent">
         <div class="bodydesc">
-            Custom ASCII generator. <a href="ascii_zone/grid.html">Try it!</a>
+            Custom ASCII generator. <a href="ascii_zone/grid.html">Create your own artwork!</a>
         </div>
         <div class="gallery">
                         <img src="imgs/ascii/asciiaxe3.png" >
-            <img src="imgs/ascii/asciiface.png" >
+            <img src="imgs/ascii/asciiscreen.png" >
       
     
         </div>
@@ -548,7 +549,7 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
           </div>
 <div class="sectioncontent">
     <div class="bodydesc" >
-A simple web-based ASCII art generator that converts images to ASCII artwork with "Acheulean Lab" characters and colors. Accessible <a href="ascii_zone/grid.html">HERE</a>.</div>
+A web-based ASCII art generator that converts images to ASCII text with "Acheulean Lab" characters and colors. Try it <a href="ascii_zone/grid.html">HERE</a>.</div>
 </div>
         <div class="tags">
             <span class="tag color-digital">Digital</span>
