roomtone copy tweak

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 </div>
 <div class="bodycontent">
     <div class="bodydesc">
-       How does ambient sound make you feel? Ambient harmony for clearer state of mind.  <a href="https://www.roomtone.xyz/">RoomTone.xyz</a>
+        Room Tone builds a harmonizing chord around the dissonant ambient soundscape, unifying an environment for better concentration, rest, and state of mind. <a href="https://www.roomtone.xyz/">RoomTone.xyz</a>
  
     </div>
     <div class="gallery">
@@ -271,7 +271,7 @@
         <p>Read More <span class="arrow">></span></p>    
         </div>
         <div class="sectioncontent">
-        <div class="bodydesc" style='font-weight: 600;' > Room Tone builds harmonizing notes around the dissonant ambient soundscape of daily life, unifying a busy environment around a shared chord. Room Tone makes a home feel calm and comfortable, or helps maintain concentration at work. The program is available to demo at
+        <div class="bodydesc" style='font-weight: 600;' >  How does noise make you feel? Room Tone builds harmonizing notes around the dissonant ambient soundscape of daily life, unifying a busy environment around a shared chord. Room Tone makes a home feel calm and comfortable, or helps maintain concentration at work. The program is available to demo at
             <a href="https://www.roomtone.xyz/">RoomTone.xyz</a>.
 <br> </div> <div class="bodydesc" >
 Room Tone negates unpleasant noises while preserving our environment. Unlike the existing systems we use to reduce disturbing sounds (like noise cancellation or white noise machines, which isolate us from our surroundings) Room Tone removes only dissonance from a soundscape. Dissonant sounds make it hard to concentrate or relax; they make us feel unsettled or tense.                    
