--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Design Research Project. Dedicated to a universal human artifact: the archetype for successful design and a symbol of our shared experience.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acheulean Lab</title>
   <link rel="icon" href="imgs/ALfavicon.svg" type="image/svg+xml">
