--- a/index.html
+++ b/index.html
@@ -436,6 +436,40 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
 </div>
 <hr>
 
+<!-- Cleat   -->
+<div class="sectioncard">
+    <div class="sectiontitle">
+        Sheet Cleat
+    </div>
+    <div class="bodycontent">
+        <div class="bodydesc">
+            Sheet metal bulletin board.</div>
+        <div class="gallery">
+            <img src="imgs/cleat/cl004.jpg" >
+            <img src="imgs/cleat/cleatgif.gif" >
+            <img src="imgs/cleat/cl001.jpg" >  
+        </div>
+        <div class="seemore">
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
+<div class="sectioncontent">
+    <div class="bodydesc">
+A minimalist take on Victorian molding. A sheet of steel, bent to form a spring clip holds artwork, postcards or photos against the wall. Bulkier objects rest in the pocket above. Each section of cleat is 18 inches long, and multiple can be assembled to cover long walls. Temporary storage for paper hoarders and graphic designers, inspired by a very cluttered junk drawer.   </div>
+
+</br>
+     <div class="gallery">
+        <img src="imgs/cleat/cl002.jpg" >
+        <img src="imgs/cleat/cl005.jpg" >
+        <img src="imgs/cleat/cl006.jpg" >
+    </div>
+</div>
+        <div class="tags">
+            <span class="tag color-material">Material</span>
+]            
+        </div>
+    </div>
+</div>
+
 <!-- Reoriented Strand Board -->
 <div class="sectioncard">
     <div class="sectiontitle">
