--- a/index.html
+++ b/index.html
@@ -435,6 +435,40 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
         </span>
 </div>
 <hr>
+<!-- Contact Galleries   -->
+<div class="sectioncard">
+    <div class="sectiontitle">
+        Contact Galleries
+    </div>
+    <div class="bodycontent">
+        <div class="bodydesc">
+            A Searchable Photo Archive Built with ML Image Segmentation <a href="https://ethan-rubens.com/contactgalleries">View the project</a></div>
+        <div class="gallery">
+            <img src="imgs/contactgal/CG_big.gif" >
+           
+        </div>
+        <div class="seemore">
+            <p>Read More <span class="arrow">></span></p>    
+          </div>
+<div class="sectioncontent">
+    <div class="bodydesc">
+A minimalist archive for a personal photography collection. A script processes and formats folders of images into a layout inspired by film contact sheets (thumbnails from the analog era), making large collections easy to skim through. A SegFormer ML model, trained on architectural images, is used to automatically identify the content of each photo and generate labels to describe common features. A list of lables (and synonyms) is queried by user search, and corresponding images are displayed. </div>
+
+</br>
+     <div class="gallery">
+        <img src="imgs/contactgal/CG_main.png" >
+        <img src="imgs/contactgal/CGflow.png" >
+        <img src="imgs/contactgal/CG_panel.gif" >  
+    </div>
+</div>
+        <div class="tags">
+            <span class="tag color-digital">Digital</span> 
+            <span class="tag color-learning">Learning How</span>
+           
+        </div>
+    </div>
+</div>
+
 
 <!-- Cleat   -->
 <div class="sectioncard">
@@ -447,7 +481,7 @@ Sounds define how a place feels. The noises around us are distinct and disconnec
         <div class="gallery">
             <img src="imgs/cleat/cl004.jpg" >
             <img src="imgs/cleat/cleatgif.gif" >
-            <img src="imgs/cleat/cl001.jpg" >  
+            <!-- <img src="imgs/cleat/cl001.jpg" >   -->
         </div>
         <div class="seemore">
             <p>Read More <span class="arrow">></span></p>    
@@ -464,8 +498,7 @@ A minimalist take on Victorian molding. A sheet of steel, bent to form a spring 
     </div>
 </div>
         <div class="tags">
-            <span class="tag color-material">Material</span>
-]            
+            <span class="tag color-material">Material</span>            
         </div>
     </div>
 </div>
